--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 markers =
     web_dependency: mark a test that requires a web connection.
+    node_dependency: mark a test that requires node.
+    ruby_dependency: mark a test that requires ruby.
